--- a/_config.yml
+++ b/_config.yml
@@ -80,4 +80,4 @@ deploy:
   type: git
   repo: https://github.com/XanthosisJYW/xanthosisjyw.github.io
   branch: master
-  message: 
+  message: add tags & categories pages
